Made overflow auto for the value selection boxes on the add / modify standard name mapping page. Some of my fluoro names are long so it's good to be able to scroll to read them. Refs issue #862

--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -427,3 +427,7 @@ li.no-wrap {
 img.colour_swatch {
   border: 1px solid #CCCCCC;
 }
+
+.selector select {
+  overflow: auto;
+}
